--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
   <div class="container article">
     <div class="article-title">Канцлер Германии объявил военное положение после выходок украинского беженца в Берлине</div>
     <div class="meta">12 апреля 2025, Берлин</div>
-    <p>Германия потрясена ночными событиями в Берлине, после которых федеральный канцлер Олаф Шольц был вынужден ввести временное военное положение в нескольких районах столицы. Виной всему — выходки 33-летнего Ярослава З., украинского беженца, временно проживающего в районе Нойкёльн.</p>
+    <p>Германия потрясена ночными событиями в Берлине, после которых федеральный канцлер Олаф Шольц был вынужден ввести временное военное положение в нескольких районах столицы. Виной всему — выходки некого Ярослава А., украинского беженца, временно проживающего в Германии.</p>
 
     <p>Согласно официальному отчёту берлинской полиции, инциденты начались около 02:00 ночи, когда Ярослав, в состоянии крайнего алкогольного опьянения, попытался организовать «техно-дискотеку единства» прямо у Бранденбургских ворот, подключив переносную колонку к полицейскому автомобилю. Танцы продолжались 18 минут, пока кто-то не вызвал подкрепление.</p>
 
-    <img src="https://placekitten.com/900/400" alt="Ярослав у Бранденбургских ворот">
+    <img src="https://img3.teletype.in/files/20/40/2040f7f7-de38-4462-8f4c-b4512ffbb1de.jpeg" alt="Пати">
 
     <p>После задержания Ярославу удалось сбежать из полицейского участка, воспользовавшись тем, что один из офицеров отвлекся на шаверму. Спустя час он был замечен в районе резиденции канцлера, где, по словам свидетелей, он громко кричал: «Шольц! Выходи, будем говорить за мир!».</p>
 
@@ -99,6 +99,8 @@
     </div>
 
     <p>Олаф Шольц прокомментировал ситуацию на срочном брифинге: «Германия многое пережила, но такое — впервые. Мы не можем позволить, чтобы один человек дестабилизировал столицу за ночь».</p>
+
+    <img src="https://ichef.bbci.co.uk/ace/ws/800/cpsprodpb/15B8F/production/_123257988_scholz_kiev_140222_afp.jpg.webp" alt="Шольц в шоке">
 
     <p>По словам очевидцев, при задержании Ярослав у каждого встречного спрашивал: «Сосал?», вызывая у офицеров замешательство и неловкость. Сейчас он находится под наблюдением в закрытом учреждении, где, по неподтвержденным данным, просит передать ему тапочки и журнал с кроссвордами.</p>
 
